--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "daily"
     ignore:
-      - dependency-name: "express"
+      - dependency-name: "react-scripts"
         # For Express, ignore all updates for version 4 and 5
         versions: ["4.x", "5.x"]
         # For Lodash, ignore all updates
