--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,3 +6,8 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "react-scripts"
+   allow:
+    # Allow updates for Lodash
+    - dependency-name: "lodash"
+    # Allow updates for React and any packages starting "react"
+    - dependency-name: "react*"
