--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,8 +6,7 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "react-scripts"
-   allow:
+    allow:
     # Allow updates for Lodash
-    - dependency-name: "lodash"
+    - dependency-name: "react-scripts"
     # Allow updates for React and any packages starting "react"
-    - dependency-name: "react*"
